# okizeme

./: Cargo.toml  README.md  clippy.txt
.githooks/: pre-commit
.github/workflows/: cargo.yml
assets/models/: Oki.glb  Oki_frames.glb
benches/: input_to_action.rs
crates/okizeme_animation/: Cargo.toml
crates/okizeme_animation/src/: lib.rs
crates/okizeme_character/: Cargo.toml
crates/okizeme_character/src/: action_state.rs  character_library.rs  constants.rs  lib.rs  movement.rs  state.rs  systems.rs
crates/okizeme_collision/: Cargo.toml
crates/okizeme_collision/src/: hitbox.rs  hurtbox.rs  lib.rs
crates/okizeme_core/: Cargo.toml
crates/okizeme_core/src/: lib.rs
crates/okizeme_defense/: Cargo.toml  health.rs
crates/okizeme_defense/src/: health.rs  hurtbox.rs  lib.rs
crates/okizeme_input/: Cargo.toml
crates/okizeme_input/src/: buffer.rs  buttons.rs  commands.rs  constants.rs  input_event.rs  input_map.rs  input_source.rs  lib.rs
crates/okizeme_macros/: Cargo.toml
crates/okizeme_offense/: Cargo.toml
crates/okizeme_offense/src/: attack.rs  collision.rs  combo.rs  hitbox.rs  lib.rs  systems.rs
crates/okizeme_physics/: Cargo.toml
crates/okizeme_physics/src/: lib.rs  systems.rs
crates/okizeme_player/: Cargo.toml
crates/okizeme_player/src/: input_map.rs  lib.rs  player_data.rs  position.rs
crates/okizeme_resources/: Cargo.toml
crates/okizeme_resources/src/: combos.rs  health_bars.rs  input_devices.rs  input_sources.rs  lib.rs  movement.rs  player_positions.rs
crates/okizeme_resources/src/movement/: backward_air_dash.rs  forward_air_dash.rs  jumps.rs  mod.rs
crates/okizeme_systems/: Cargo.toml
crates/okizeme_systems/src/: animation.rs  attacks.rs  character.rs  collision.rs  config.rs  input.rs  lib.rs  physics.rs  timers.rs
crates/okizeme_traits/: Cargo.toml
crates/okizeme_traits/src/: lib.rs  movement.rs
crates/okizeme_types/: Cargo.toml
crates/okizeme_types/src/: config.rs  lib.rs
crates/okizeme_types/tests/: types_tests.rs
crates/okizeme_utils/: Cargo.toml
crates/okizeme_utils/src/: lib.rs
examples/: basic_movement.rs  character_animation.rs  collisions.rs
notes/: input-handling  state_implementation
okizeme_macros/: Cargo.toml
src/: collision.rs  lib.rs  new_types.rs  states.rs
src/animation/: mod.rs
src/character/: action_map.rs  action_prefabs.rs  action_state.rs  actions.rs  collision.rs  mod.rs  movement.rs  state.rs
src/components/: mod.rs
src/components/character/: mod.rs
src/defense/: blocking.rs  health.rs  hurtbox.rs
src/input/: actions.rs  buffer.rs  buttons.rs  commands.rs  constants.rs  input_buffer.rs  input_event.rs  input_listener.rs  input_map.rs  input_source.rs  mod.rs  parsing.rs  types.rs
src/macros/: mod.rs
src/offense/: attack.rs  collision.rs  combo.rs  hitbox.rs
src/physics/: mod.rs
src/resources/: combos.rs  health_bars.rs  input_devices.rs  input_sources.rs  mod.rs  player_positions.rs
src/resources/character/: movement.rs
src/systems/: animation.rs  attacks.rs  character.rs  collision.rs  config.rs  input.rs  physics.rs  timers.rs
src/types/: config.rs  mod.rs
src/utils/: mod.rs
tests/: input_test.rs  system_tests.rs
