[package]
name = "okizeme"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/spooky-th-ghost/okizeme"
description = "a micro engine for creationg fighting games in bevy"

[workspace]
members = ["crates/*"]

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", rev = "8e036344575b4c218f853731eacc7cdea66fc9f6", version = "0.8.0-dev"}
regex = "1.4.6"
lazy_static = "1.4.0"
serde_json = "1.0"
serde = "1.0.136"
bevy-inspector-egui = { version = "0.8", optional = true }
okizeme_core = {path ="crates/okizeme_core", version="0.1.0"}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[[example]]
name = "character_animation"
path = "examples/character_animation.rs"
