[package]
name = "okizeme"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/spooky-th-ghost/okizeme"
description = "a micro engine for creationg fighting games in bevy"

[dependencies]
bevy = "0.9.1"
regex = "1.4.6"
lazy_static = "1.4.0"
serde_json = "1.0"
serde = "1.0.136"
bevy-inspector-egui = "0.16"
leafwing-input-manager = "0.7.2"

[features]
default = []
debug = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[[example]]
name = "character_animation"
path = "examples/character_animation.rs"

[[example]]
name = "collisions"
path = "examples/collisions.rs"

[[example]]
name = "basic_movement"
path = "examples/basic_movement.rs"
