[package]
name = "okizeme_animation"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/spooky-th-ghost/okizeme/tree/main/crates/okizeme_animation"
description = "crate for handling animation in okizeme"

[dependencies]
bevy = {git = "https://github.com/spooky-th-ghost/bevy", branch = "animation-clip-public-access", version = "0.8.0-dev"}
okizeme_types = {path = "../okizeme_types", version = "0.1.0"}
