[package]
name = "okizeme_character"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {git = "https://github.com/spooky-th-ghost/bevy", branch = "animation-clip-public-access", version = "0.8.0-dev"}

okizeme_input = {path = "../okizeme_input", version = "0.1.0"}
okizeme_utils = {path = "../okizeme_utils", version = "0.1.0"}
