[package]
name = "okizeme_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/spooky-th-ghost/okizeme/tree/main/crates/okizeme_core"
description = "crate exposing all of the sub crates for okizeme"

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", rev = "8e036344575b4c218f853731eacc7cdea66fc9f6", version = "0.8.0-dev"}
okizeme_input = {path = "../okizeme_input", version="0.1.0"}
okizeme_player = {path = "../okizeme_player", version="0.1.0"}
okizeme_character = {path = "../okizeme_character", version="0.1.0"}
okizeme_animation = {path = "../okizeme_animation", version="0.1.0"}
okizeme_offense = {path = "../okizeme_offense", version="0.1.0"}
okizeme_defense = {path = "../okizeme_defense", version="0.1.0"}
okizeme_utils = {path = "../okizeme_utils", version="0.1.0"}
okizeme_types = {path = "../okizeme_types", version="0.1.0"}
