[package]
name = "okizeme_defense"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/spooky-th-ghost/okizeme/tree/main/crates/okizeme_defense"
description = "a crate handling defense, hurtboxes, and damage in okizeme"

[dependencies]
bevy = "0.7"
okizeme_types = {path = "../okizeme_types", version ="0.1.0"}
