[package]
name = "okizeme_input"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/spooky-th-ghost/okizeme/tree/main/crates/okizeme_input"
description = "a crate handling input mapping and reading in okizeme"

[dependencies]
bevy = "0.7"
regex = "1.4.6"
lazy_static = "1.4.0"
okizeme_types = {path = "../okizeme_types", version="0.1.0"}
okizeme_utils = {path = "../okizeme_utils", version="0.1.0"}
