[package]
name = "okizeme_offense"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/spooky-th-ghost/okizeme/tree/main/crates/okizeme_offense"
description = "a crate handling attacks, hitboxes, and combos in okizeme"

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", rev = "990d5c0879e359d78c24c0b702b330fb759e102c", version = "0.8.0-dev"}
bevy-inspector-egui = { version = "0.8", optional = true }
serde_json = "1.0"
serde = "1.0.136"

okizeme_defense = {path = "../okizeme_defense", version="0.1.0"}
okizeme_types = {path = "../okizeme_types", version="0.1.0"}
okizeme_utils = {path = "../okizeme_utils", version="0.1.0"}
