[package]
name = "okizeme_player"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/spooky-th-ghost/okizeme/tree/main/crates/okizeme_player"
description = "a crate handling player resources and input devices in okizeme"

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", rev = "8e036344575b4c218f853731eacc7cdea66fc9f6", version = "0.8.0-dev"}
okizeme_input = {path = "../okizeme_input", version="0.1.0"}
okizeme_types = {path = "../okizeme_types", version="0.1.0"}
