[package]
name = "okizeme_player"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/spooky-th-ghost/okizeme/tree/main/crates/okizeme_player"
description = "a crate handling player resources and input devices in okizeme"

[dependencies]
bevy = "0.7"
okizeme_defense = {path = "../okizeme_defense", version="0.1.0"}
okizeme_input = {path = "../okizeme_input", version="0.1.0"}
okizeme_types = {path = "../okizeme_types", version="0.1.0"}
okizeme_offense = {path = "../okizeme_offense", version="0.1.0"}
