[package]
name = "okizeme_types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/spooky-th-ghost/okizeme/tree/main/crates/okizeme_types"
description = "a crate containing various high level types in okizeme"

[dependencies]
bevy = "0.8"
bevy-inspector-egui = "0.12"
okizeme_utils = {path = "../okizeme_utils", version = "0.1.0"}
